[package]
name = "pinyin-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
pinyin = { version = "0.9.0", default-features = false, features = ["heteronym", "with_tone"] }
serde = { version = "1.0.141", features = ["derive"] }
